auth/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kanidm
  labels:
    app.kubernetes.io/name: kanidm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kanidm
  replicas: 1

  template:
    metadata:
      labels:
        app.kubernetes.io/name: kanidm
    spec:
      containers:
        - name: kanidm-server
          image: docker.io/kanidm/server:1.3.3
          ports:
            - containerPort: 8443
              name: https
          volumeMounts:
            - name: storage
              mountPath: /data
            - name: tls
              mountPath: /data/tls
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: tls
          secret:
            secretName: kanidm-server-tls

  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: [ReadWriteOncePod]
        storageClassName: local-path-fast
        resources:
          requests:
            storage: 1Gi
